# RealEstateApp

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  NodeName.py  README.md  ai.py  api.py  app.py  chainlit.md  cli.py  docker-compose.yml  financial_modeler.py  graph.py  ingest.py  main.py  market_data.py  neighborhood_vibe.py  pyproject.toml  server.py  state.py  supervisor.py  utils.py  zoning_law.py
.chainlit/: config.toml
.github/workflows/: deploy.yml
agents/: __init__.py  financial_modeler.py  ingest.py  ingest_input.py  market_data.py  neighborhood_vibe.py  supervisor.py  zoning_law.py
config/: __init__.py  config.py  constants.py  llm.py
k8s/: deployment.yaml  service.yaml
logger/: callbacks.py  lmm_translator.py  logger.py
public/: style.css  theme.json
schema/: __init__.py  market_data.py  state.py
scripts/: sync_knowledge_base.py
services/: __init__.py  base_api_client.py  base_client.py  base_mcp_client.py  market_data_gateway.py  mcp_gateway.py  vector_store.py
terraform/: main.tf  provider.tf
tests/: conftest.py  test_agents.py  test_api_clients.py  test_tools.py  test_utils.py
tests/fixtures/: mock_financial_modeler_output_payload.json  mock_market_data_output_payload.json  mock_neighborhood_vibe_output_payload.json  mock_rapidapi_listings.json  mock_zoning_law_llm_response  mock_zoning_law_mcp_search_results  mock_zoning_law_output_payload.json  rapidapi_listings.json
tools/: __init__.py  tools.py  vector_tools.py
utils/: callbacks.py  logger.py  utils.py
