[project]
name = "realestateapp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.11.1",
    "httpx>=0.28.0",
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "mcp>=1.27.1",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
