[project]
name = "realestateapp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "azure-storage-blob>=12.29.0",
    "chainlit>=2.11.1",
    "httpx>=0.28.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.0",
    "mcp>=1.27.1",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "pinecone>=5.0.1",
    "langchain-experimental>=0.4.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
]
